grammar.js
    config: $ => repeat($._top_item),

    // Hidden newline token. Because `\n` is not in `extras`, inter-item
    // newlines must be consumed explicitly; this rule (hidden, so it does not
    // appear in the AST) is mixed into `_top_item` / `_body_item` / `_item` so
    // every multi-line repeat can absorb blank/separator lines uniformly.
    _top_item: $ => choice(
      $._nl,
      $.section,
      $._j2_statement,
      $._ios_statement,
      $.output,
      $.comment,
      $.text,
    ),

    // Kept for the jinja statement bodies below; unchanged so their emitted AST
    // stays byte-identical. Includes `section` so a jinja body (e.g. a
    // `{% for %}` loop) can contain an `interface_section` / `router_section`.
    // `_nl` consumes inter-item newlines (since `\n` is no longer an extra).
    _item: $ => choice($._nl, $.section, $._j2_statement, $._ios_statement, $.output, $.comment, $.text),

    // Hierarchical section model. A section is a header followed by a body of
    // commands, terminated by an explicit `!` (eos). Only `interface_section`
    // exists for now; `section` is the generic dispatch for future section types
    // (router_section, etc.).
    _command: $ => choice(
      $.hostname_statement,
      $.version_statement,
      $.service_statement,
      $.description_statement,
      $.shutdown_statement,
      $.speed_statement,
      $.duplex_statement,
      $.mtu_statement,
      $.address_family_statement,
      $.neighbor_statement,
      $.network_statement,
      $.redistribute_statement,
      $.passive_interface_statement,
      $.router_id_statement,
      $.exit_address_family_statement,
      $.metric_style_statement,
      $.graceful_restart_statement,
      $.queue_depth_statement,
      $.compatible_statement,
      $.auto_cost_statement,
      $.aggregate_address_statement,
      $.af_interface_statement,
      $.autonomous_system_statement,
      $.maximum_prefix_statement,
      $.summary_prefix_statement,
      $.default_information_statement,
      $.distribute_list_statement,
      $.snmp_server_statement,
      $.scheduler_statement,
      $.hw_module_statement,
      $.memory_statement,
      $.rtr_statement,
      $.exception_statement,
      $.subscriber_statement,
      $.mac_address_table_statement,
      $.kerberos_statement,
      $.boot_statement,
      $.tacacs_server_statement,
      $.parser_statement,
      // --- config-line rich rules (see comment block above `negated_statement`)
      $.exec_timeout_statement,
      $.login_statement,
      $.password_statement,
      $.transport_statement,
      $.access_class_statement,
      $.terminal_type_statement,
      $.length_statement,
      $.width_statement,
      $.editing_statement,
      $.motd_banner_statement,
      $.escape_character_statement,
      $.activation_character_statement,
      $.databits_statement,
      $.parity_statement,
      $.padding_statement,
      $.stopbits_statement,
      // --- access-list rich rules (ACE permit/deny; see comment block above
      // `permit_statement` — these are the line-starting first token of every
      // config-(ext|std|ipv6|ext-macl)-nacl / config-source-guard ACE line)
      $.permit_statement,
      $.deny_statement,
      // --- rich misc rules (match/set/class + vlan/pmap-c/redundancy/route-map;
      // see comment block above `match_statement` for the GENERIC rationale and
      // the per-keyword deferred notes)
      $.match_statement,
      $.set_statement,
      $.class_statement,
      $.remote_span_statement,
      $.private_vlan_statement,
      $.police_statement,
      $.priority_statement,
      $.drop_statement,
      $.random_detect_statement,
      $.auto_sync_statement,
      $.continue_statement,
      $.command_line,
    ),

    // Generic command line: a leading identifier (the first keyword token) plus
    // zero or more args. Multi-word command identity is resolved downstream by
    // the LSP against data/commands.json — NOT by the AST — so only the first
    // token is captured as `name`. `_cmd_arg` deliberately excludes
    // `interface_name` (which overlaps `value` and creates lexical ambiguity).
    //
    // `prec.right` makes the rule right-associative, so a shift/reduce conflict
    // where the next token could either extend this command_line (e.g. an arg
    // that is itself an `output`/`{{...}}`) or begin a sibling item resolves by
    // shifting — i.e. the longer match wins and the token stays inside args.
    //
    // Line-bound: because `\n` is NOT in `extras` (see top of file), the
    // `repeat(arg)` cannot drift across a newline — `value`/`output`/`identifier`
    // all exclude `\n`, so the repeat stops at end-of-line and the following
    // `_nl` (consumed by the enclosing `config`/section body repeat) cleanly
    // separates this command_line from the next item.
    _cmd_arg: $ => choice($.value, $.output),

    output: $ =>
      seq("{{", optional($._output_code), "}}"),
    _output_code: _ => prec.right(repeat1(/[^\s\}\-\+]+|[\}\-\+]/)),

    version_statement: $ => seq(
      token(prec(2, "version")),
      field("configured_version", choice($.value, $.output)),
    ),

    // --- config-if "rich" sub-commands -------------------------------------
    // These OVERRIDE the generic `command_line` for high-frequency interface
    // sub-commands. Each leading keyword is `token(prec(2, ...))` so it
    // tokenizes as a keyword rather than as the generic `identifier`/`value`
    // that `command_line` starts with — that is what lets the rich rule win.
    //
    // NOTE on `ip address`: DEFERRED. Promoting `ip` (or even `address`) to a
    // prec-2 keyword breaks every OTHER `ip ...` config-if/global command
    // (ip access-group, ip helper-address, ip route, ip verify, ...) because
    // the lexer commits to the keyword tokenization and tree-sitter's GLR
    // does NOT re-lex. At top level `ip route` survived (rich rule not in
    // scope there), but inside section bodies / `negated_statement` the rich
    // rule IS in scope, so `ip` lexed as a keyword and the `command_line`
    // fallback (which needs `identifier`) died → ERROR. This single rule
    // regressed coverage by +344 errors (config-if 64→351, config 19→64).
    // Re-enable only with a technique that keeps `ip` lexable as `identifier`
    // (e.g. an external scanner or a lookahead-gated rule).

    negated_statement: $ => seq(
      $.negation_keyword,
      field("keyword", choice($._command, $.section_header)),
    ),

    negation_keyword: $ => token(prec(2, "no")),

    service_statement: $ => seq(
      token(prec(2, "service")),
      choice(
        prec(1, $.output),
        field("keyword", choice(
          $.timestamps,
          $.counters,
          $.prompt,
          alias($.service_pad, $.pad),
          alias($.service_password_recovery, $.password_recovery),
          alias($.service_compress_config, $.compress_config),
          alias($.service_linenumber, $.linenumber),
          alias($.service_nagle, $.nagle),
          alias($.service_tcp_keepalive_in, $.tcp_keepalive_in),
          alias($.service_tcp_keepalive_out, $.tcp_keepalive_out),
          $.tcp_small_servers,
          $.udp_small_servers,
        )),
        prec(-1, repeat1(field("arg", $._cmd_arg))),
      ),
    ),

    tcp_small_servers: $ => seq(
      token(prec(2, "tcp-small-servers")),
      optional(field("keyword", choice($.no_limit, $.max_servers))),
    ),

    udp_small_servers: $ => seq(
      token(prec(2, "udp-small-servers")),
      optional(field("keyword", choice($.no_limit, $.max_servers))),
    ),

    no_limit: $ => token(prec(2, "no-limit")),

    max_servers: $ => seq(
      token(prec(2, "max-servers")),
      field("keyword", choice($.value, $.output)),
    ),

    prompt: $ => seq(
      token(prec(2, "prompt")),
      field("keyword", alias($.service_prompt_config, $.config)),
    ),
    counters: $ => seq(
      token(prec(2, "counters")),
      field("keyword", $.max),
    ),

    max: $ => seq(
      token(prec(2, "max")),
      field("keyword", $.age),
    ),

    age: $ => seq(
      token(prec(2, "age")),
      choice($.value, $.output),
    ),

    timestamps: $ => choice(
      prec(2, seq(
        token(prec(2, "timestamps")),
        field("keyword", choice($.debug, $.log)),
        optional(choice(
          seq(
            $.datetime,
            optional($.msec),
            repeat(choice($.localtime, $.show_timezone, $.year)),
          ),
          seq(
            $.uptime,
            repeat(choice($.localtime, $.show_timezone, $.year)),
          ),
        )),
      )),
      prec(1, token(prec(2, "timestamps"))),
    ),

    debug: $ => token(prec(2, "debug")),
    log: $ => token(prec(2, "log")),
    datetime: $ => token(prec(2, "datetime")),
    uptime: $ => token(prec(2, "uptime")),
    msec: $ => token(prec(2, "msec")),
    localtime: $ => token(prec(2, "localtime")),
    show_timezone: $ => token(prec(2, "show-timezone")),
    year: $ => token(prec(2, "year")),

    for_statement: ($) =>
      seq(
        statement("for", field("iteration", expression_in_statement($))),
        field("body", repeat($._item)),
        choice($.for_else_statement, statement("endfor")),
      ),
    value: _ => token(prec(1, /[a-zA-Z0-9\.\-\/:,]+/)),
  }
});
