test/corpus/version.txt
===
version text
===

version 17.3

---

(config
  (version_statement configured_version: (value)))

===
version variable
===

version {{ ver }}

---

(config
  (version_statement configured_version: (output)))
